Fixed layout issue where white space appeared between the image ribbon and the "About" section by adjusting margins, paddings, and height constraints.

--- a/Css/style.css
+++ b/Css/style.css
@@ -192,7 +192,6 @@ header .navbar nav ul a {
   width: 100%;
   overflow: hidden;
   background-color: var(--LightBeige-color);
-  padding: 10px 0;
 }
 
 .image-ribbon {
@@ -206,6 +205,7 @@ header .navbar nav ul a {
   height: auto;
   margin: 0 10px;
   border-radius: 10px;
+  padding-top: 50px;
 }
 
 button {
@@ -243,7 +243,8 @@ button {
 
 /* about start */ 
 #about {
-  padding: 3rem 0;
+  position: relative;
+  top: -390px;
 }
 
 #about h2 {
